# MIA-P1-1s19

./: .fuse_hidden0000040e00000006  .gitignore  CMakeLists.txt  README.md  main.c
command/: cmdfdisk.h  cmdmkdisk.h  cmdmount.h  cmdrep.h  cmdrmdisk.h
ejemplos/: entrada1.sh
file_manager/: manager.h
globalvar/: global.h
interpreter/: compiler.h
struct/: disk.h  info_disk.h  mlist.h  parameter.h  struct_disk.h
